examples/test/testpolicy14254.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14254
  namespace: namespace435
spec:
  podSelector:
    matchLabels:
      key22: value48
      key49: value2
      key4: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value25
      podSelector:
        matchLabels:
          key21: value11
          key24: value24
